@@ -1,4 +1,5 @@
 require "relapse/builders/win32_builder"
+require 'relapse/exe_maker'
 
 module Relapse
   module Builders
@@ -6,39 +7,35 @@ module Relapse
     class Win32Folder < Win32Builder
       Builders.register self
 
-      INSTALLER_SCRIPT = "win32_folder.iss"
-      UNINSTALLER_FILES = %w[unins000.dat unins000.exe]
-
       def self.folder_suffix; "WIN32"; end
 
       # FOLDER containing EXE, Ruby + source.
       def generate_tasks
-        directory folder
-
         file folder => project.files do
-          create_link_files folder
-          project.exposed_files.each {|file| cp file, folder }
+          tmp_ocra_executable = "#{folder}.exe"
 
-          create_installer installer_name, :links => false
-
-          # Extract the installer to the directory.
-          command = %[#{installer_name} /VERYSILENT /DIR=#{folder}]
-          puts command if project.verbose?
+          command = %[#{ocra_command} --output "#{tmp_ocra_executable}" --debug-extract]
+          puts command
           system command
 
-          # Remove files that would be used to uninstall.
-          UNINSTALLER_FILES.each {|f| rm File.join(folder, f) }
-          rm temp_installer_script
-          rm installer_name
+          # Extract the files from the executable.
+          system tmp_ocra_executable
+          rm tmp_ocra_executable
+
+          mv Dir["#{File.dirname(folder)}/ocr*\.tmp"].first, folder
+
+          Relapse::ExeMaker.create("#{folder}/#{executable_name}", "src/#{project.executable}",
+                                   :icon => icon, :windows => (effective_executable_type == :windows))
+
+          create_link_files folder
+          project.exposed_files.each {|file| cp file, folder }
         end
 
-        desc "Build source/exe folder #{project.version} [Innosetup]"
+        desc "Build source/exe folder #{project.version}"
         task "build:win32:folder" => folder
       end
 
       protected
-      def temp_installer_script; "#{project.output_path}/#{INSTALLER_SCRIPT}"; end
-      def installer_name; "#{project.folder_base}_setup_to_folder.exe"; end
       def executable_name; "#{project.underscored_name}.exe"; end
     end
   end
